--- a/style.css
+++ b/style.css
@@ -63,7 +63,10 @@ h1 {
 }
 @media (max-width: 600px) {
   .buttom {
-    margin: 22%;
+    margin: 15%;
     width: 500px;
   }
+h1{
+font size:15px;
+}
 }
