--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ h1 {
     overflow: hidden;
   }
   .buttom {
-    margin: 25% 17%;
-    width: 500px;
+        margin: 60% 35px;
+        width: 340px;
   }
   h1 {
     font-size: 15px;
